<resources>
    <string name="app_name">DSTVisionScreener</string>
    <string name="welcome_text">Radial deformation acuity(RDA) test
    \n\n You need to choose odd targets  \n\n press START when you are ready </string>

    <string name="vo_welcome_text">Manipal Vanishing Optotype acuity test
    \n\n You need to Touch Opening of targets  \n\n press START when you are ready </string>
    <string name="title_activity_stimuli_screen">Test Screen</string>

    <string name="Option_label_1">Total Number of Stimuli</string>
    <string name="Option_label_2">Total number of Real stimuli</string>
    <string name="Option_label_3">Number of attempts</string>
    <string name="Option_label_4">Timeout (Seconds)</string>
    <string name="Option_label_5">User ID</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_stimuli_tabbed_results">StimuliTabbedResults</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <!-- Strings related to login -->
    <string name="prompt_email">User_ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_main">Main Page</string>
    <string name="title_activity_instruction">Instruction </string>
    <string name="title_activity_welcome">Digital Amsler</string>
    <string name="title_activity_login">Login</string>
    <string name="Login">Login</string>
    <string name="title_activity_instr">Instructions</string>
    <string name="title_activity_defect_list">Defect Lists</string>
    <string name="title_activity_amsler_static">Focus on Center Dot </string>

    <string name="title_activity_choose_eye">Choose Eye</string>
    <string name="radiobutton">RadioButton</string>
    <string name="title_activity_drawing_main">Draw Defects</string>
    <string name="title_activity_change_orientation">ChangeOrientation</string>
    <string name="title_activity_root__finished">Root_Finished</string>
    <string name="skip_for_now">Skip </string>
    <string name="proceed_to_test">Proceed To test</string>
    <string name="choose_which_eye_to_be_tested">Choose which eye to be tested</string>
    <string name="only_test_my_left_eye">Left Eye</string>
    <string name="only_test_my_right_eye">Right Eye</string>
    <string name="title_activity_vo_main_scr">VO_main_scr</string>
    <string name="title_activity_root__results">Root_Results</string>


</resources>