<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".Root_LoginActivity"

    android:background="@drawable/dactvbg"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    >


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffffff"
        android:textSize="42sp" />


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/Ed_User_id"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/prompt_email"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#ffffffff"
            android:textColorHint="#ffffffff"
            android:textSize="30sp" />

        <AutoCompleteTextView
            android:id="@+id/Ed_User_pwd"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#ffffffff"
            android:textColorHint="#ffffffff"
            android:textSize="30sp" />

        <Button
            android:id="@+id/sign_in"
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#ff7e51c2"
            android:text="@string/action_sign_in"
            android:textColor="#ffffffff"
            android:textSize="30sp"
            android:textStyle="bold" />




    </LinearLayout>

    </LinearLayout>


